Fixed auto increasing font-size on iPhone in landscape mode

--- a/assets/base.css
+++ b/assets/base.css
@@ -102,6 +102,10 @@ html {
   padding: env(safe-area-inset);
 }
 
+.touch {
+  -webkit-text-size-adjust: 100%;
+}
+
 body {
   background: var(--background-primary);
   color: var(--color-primary);
